@@ -1,11 +1,3 @@
-* layer timeout support (Frederic Ferner)
- * dynamic map layers (traffic, weather, etc.) now automatically load new tiles once the oled ones time out
- * not yet handles staring at the same part of map for hours
- * you need to move the map a bit so that the tiles are requested again & refetched
-* support for setting network usage mode in Qt 5 GUI (Frederic Ferner)
- * max - unlimited network usage
- * minimal - no automatic tile download
-* Thanks a lot to Frederic for these nice two patches! :)
-* fix text sizing on icon grid
-* fix compass rose display with qrc (Android)
- * it still does not rotate on Android some reason :)
+* first official modRana release for Android! :)
+* make theme parsing more robust
+* fix window sizing regression on Sailfish OS
