@@ -1,1 +1,1 @@
-0.50.1
+0.50.2
